# eye-tracker

./: .gitignore  Dockerfile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  description.rst  index.rst  installation_and_usage.rst  library.rst  testing.rst
src/eyeTracker/: __init__.py  eyeTracker.py
src/eyeTracker/aux/: __init__.py  bothEyesTracker.py  detectors.py  oneEyeTracker.py
src/eyeTracker/console/: __init__.py  track_eyes.py  track_pupils.py
src/eyeTracker/data/: __init__.py
src/eyeTracker/data/Classifiers/: __init__.py
src/eyeTracker/data/Classifiers/haar/: __init__.py
tests/: __init__.py  testModule.py
